--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-        {% block page_title %}SaaS{% endblock page_title %}
-        </title>
-    </head>
-    <body>
+<head>
+    <title>
+    {% block page_title %}SaaS{% endblock page_title %}
+    </title>
 
+    {% include 'base/css.html' %}
+</head>
+<body>
 
-        <h1>Welcome to {{ page_title }}</h1>
+    {% include 'nav/navbar.html' %}
 
-        {% block content %}
+    {% block content %}
 
-        {% endblock content %}
-    </body>
+    {% endblock content %}
+
+    {% include 'base/js.html' %}
+</body>
 </html>
