--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,6 +11,8 @@
 
     {% include 'nav/navbar.html' %}
 
+    {% include 'base/messages.html' with messages=messages %}
+
     {% block content %}
 
     {% endblock content %}
